faahri deneme sonrası. Docker düzeltmeleri veritabanı düzeltmeleri öncesi